[package]
name = "minorhacks_chess"
version = "0.1.3"
edition = "2018"
authors = ["Scott Minor <minor@minorhacks.com>"]
description = "Fork of the `chess` crate (github.com/jordanbray/chess). This one has a unique set of bugs useful for certain applications; prefer to use the upstream crate."
build = "src/build.rs"

homepage = "https://github.com/minorhacks/chess"
repository = "https://github.com/minorhacks/chess"
readme = "README.md"
keywords = []
license = "MIT"

[dependencies]
arrayvec = "0.5.1"
nodrop = "0.1.14"
failure = "0.1.6"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[build-dependencies]
rand = { version = "0.7.2", default_features = false, features = ["small_rng"] }
failure = "0.1.6"
